--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -22,4 +22,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+  <plugins>
+  <!-- Update to latest version of JAva -->
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+			<configuration>
+				<source>1.8</source>
+				<source>1.8</source>
+			</configuration>
+			</plugin>
+		</plugins>
+  </build>
 </project>
